# stack-starter

./: .gitignore  README.md  pyproject.toml
docs/recipe_manifest/: manifest.example.yaml  manifest_specs.md
mac_arm_starter/: playbook.yml
recipes/configure/mac_arm_starter/: playbook.yml  setup_mac.sh
recipes/configure/sample_configure/: manifest.yaml  start.sh
recipes/provision/: README.md
recipes/provision/sample_provision/: manifest.yaml
recipes/provision/vagrant_nval/: .env.example  Vagrantfile  Vagrantfile-from-base-box  bootstrap.sh  set_authorised_keys.sh
stack_starter/: cli.py  runners.py  utils.py
stack_starter/recipes/configure/: README.md
stack_starter/recipes/configure/mac_arm_starter/: manifest.json  manifest.yaml
stack_starter/recipes/configure/sample_configure_ansible/: manifest.yaml  playbook.yml  setup_mac.sh
stack_starter/recipes/configure/sample_configure_bash/: manifest.yaml
stack_starter/recipes/provision/sample_provision/: manifest.yaml  start.sh
stack_starter/recipes/provision/sample_provision_vagrant/: Vagrantfile  manifest.yaml
stack_starter/recipes/provision/vagrant_nval/: Vagrantfile  manifest.yaml
