[tool.poetry]
name = "stack-starter"
version = "0.1.0"
description = "A CLI tool for starting stacks"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"
typing-extensions = "^4.12.2"

[tool.poetry.scripts]
stack-starter = "stack_starter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
